--- a/css/style.css
+++ b/css/style.css
@@ -51,20 +51,52 @@ header {
 /* main */
 
 main {
-    width: 54%;
-    margin: 0 auto;
+    width: 32%;
     background: white;
     margin-top: 25px;
+    margin-left: 227px;
     border-radius: 8px;
-}
-
-.button, .elenco {
-    padding: 12px 35px;
 }
 
 .first-container {
     border-bottom: 3px solid #F5F8F9;
 }
 
+.button, .elenco {
+    padding: 12px 35px;
+}
 
+.first-special-button-container {
+    width: 60px;
+    height: 20px;
+    display: inline-block;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 4px;
+    color: white;
+    font-size: 10px;
+}
+
+.second-special-button-container {
+    width: 70px;
+    height: 20px;
+    display: inline-block;
+    text-align: center;
+    line-height: 18px;
+    border-radius: 4px;
+    border: 1px solid #C8CED3;
+    color: #C8CED3;
+    font-size: 10px;
+}
+
+.special-button-elenco {
+    width: 48px;
+    height: 17px;
+    display: inline-block;
+    text-align: center;
+    line-height: 17px;
+    border-radius: 10px;
+    color: white;
+    font-size: 10px;
+}
 
