--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* colors */
@@ -45,6 +48,10 @@ header {
     display: flex;
     align-items: center;
     padding: 7px 11px;
+}
+
+h1 {
+    font-size: 40px;
 }
 
 
@@ -100,3 +107,11 @@ main {
     font-size: 10px;
 }
 
+.tasks {
+    margin-bottom: 20px;
+}
+
+li {
+    font-size: 15px;
+    margin-bottom: 10px;
+}
